--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 #Update all the sections by editing the data.yml file inside _data folder.
 
 # Site Settings
-title: My Resume
+title: Hello I'm Gunee Choi
 url: 'https://ChoiGunHee.github.io/online-cv/'
 
 #change it according to your repository name
@@ -10,7 +10,7 @@ url: 'https://ChoiGunHee.github.io/online-cv/'
 
 description: A beautiful Jekyll theme for creating resume
 # Style will be applied only after restarting the build or serve. Just choose one of the options.
-theme_skin: blue # blue turquoise green berry orange ceramic teal oceanstale
+theme_skin: brown # blue turquoise green berry orange ceramic teal oceanstale
 chrome_mobile_color: #use hex colors (ex:#1976d2) or leave empty if you don't want a color for chrome mobile searchbar
 
 # Tracker
